--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,81 @@
 *{
-    margin: 0;
+    
     padding: 0;
     box-sizing: border-box;
 }
 body{
-    padding: 40px;
+    padding: 60px;
 }
+/* inizio header */
 .pink{
-    height: 50px;
+    height: 70px;
     background-color:#E579E6;
     margin-bottom: 15px;
+    width: 890px;
 }
+/* inizio main */
 .yellow{
-    height:300px ;
+    height:200px ;
     background-color:#E1D67A ;
     margin-bottom: 15px;
+    width: 890px;
 }
-.celeste{
-    height:400px ;
-    background-color: #ABCFE7;
+.blue{
+    height:300px ;
+    background-color: #0086FF;
     margin-bottom: 5px;
+    width: 890px;
+    
 }
+/* inizio footer */
 .viola{
-    height: 25px;
+    height: 35px;
     background-color: #8801FE;
+    width: 890px;
 }
+/* inizio rettangoli in contenitore blu */
+.contenitore::after{
+    content: "";
+    display: table;
+    clear: both;
+    height: 300px;
+}
+/* rettangolo superiore */
+.superiore{
+    background-color: #ABCFE7;
+    height:40px ;
+
+}
+/* rettangolo di sinistra */
+.sinistra{
+    float: left;
+     height:240px;
+     width: 220px;
+     background-color:#ABCFE7 ;
+     margin-top: 10px;
+}
+/* rettangolo al centro */
+.centro{
+    float: left;
+    height: 240px;
+    width: 430px;
+    background-color:#ABCFE7 ;
+    margin-left: 10px;
+    margin-top:10px ;
+    margin-bottom: 10px;
+    
+}
+/* rettangolo di destra */
+.destra{
+    float: left;
+    height: 240px;
+    width: 220px;
+    background-color:#ABCFE7 ;
+    margin-left: 10px;
+    margin-top:10px ;
+    margin-bottom: 10px;
+    margin-right: 0px;
+    
+    
+}
+
